--- a/arch/arm64/boot/dts/qcom/trinket.dtsi
+++ b/arch/arm64/boot/dts/qcom/trinket.dtsi
@@ -319,11 +319,14 @@
 
 		CPU_COST_0: core-cost0 {
 			busy-cost-data = <
-				864000	68
-				1017600	79
-				1305600 114
-				1612800	171
-				1804800	223
+				300000	12
+				614400	22
+				864000	39
+				1017600	54
+				1305600	83
+				1420800	102
+				1612800	130
+				1804800	172
 			>;
 			idle-cost-data = <
 				10 8 6 4
@@ -332,11 +335,14 @@
 
 		CPU_COST_1: core-cost1 {
 			busy-cost-data = <
-				902400	154
-				1401600	289
-				1536000 344
-				1804800 469
-				2016000	596
+				300000	211
+				652800	417
+				902400	722
+				1056000	991
+				1401600	1577
+				1536000	1932
+				1804800	2579
+				2016000	3391
 			>;
 			idle-cost-data = <
 				100 60 40 20
@@ -345,9 +351,12 @@
 
 		CLUSTER_COST_0: cluster-cost0 {
 			busy-cost-data = <
+				300000	5
+				614400	8
 				864000	9
 				1017600	12
 				1305600	18
+				1420800	21
 				1612800	27
 				1804800	36
 			>;
@@ -358,7 +367,10 @@
 
 		CLUSTER_COST_1: cluster-cost1 {
 			busy-cost-data = <
+				300000	38
+				652800	46
 				902400	52
+				1056000	68
 				1401600	88
 				1536000	100
 				1804800	108
@@ -376,7 +388,7 @@
 	};
 
 	chosen {
-		bootargs = "rcupdate.rcu_expedited=1 rcupdate.rcu_normal_after_boot=1 rcu_nocbs=0-7 nosoftlockup mce=ignore_ce noirqdebug quiet";
+		bootargs = "quiet noirqdebug rcupdate.rcu_normal_after_boot=1 rcu_nocbs=0-7";
 	};
 
 	soc: soc { };
@@ -392,17 +404,17 @@
 				compatible = "android,fstab";
 				vendor {
 					compatble = "android,vendor";
-					dev = "/dev/block/platform/soc/4804000.ufshc/by-name/vendor";
+					dev = "/dev/block/platform/soc/4744000.sdhci/by-name/vendor";
 					type = "ext4";
 					mnt_flags = "ro,barrier=1,discard";
-					fsmgr_flags = "wait,slotselect,avb";
+					fsmgr_flags = "wait";
 					status = "ok";
 				};
 			};
 		};
 	};
 
-	reserved_memory: reserved-memory {
+	reserved-memory {
 		#address-cells = <2>;
 		#size-cells = <2>;
 		ranges;
@@ -464,25 +476,25 @@
 		pil_adsp_mem: pil_adsp_region@55300000 {
 			compatible = "removed-dma-pool";
 			no-map;
-			reg = <0 0x55300000 0 0x1e00000>;
+			reg = <0 0x55300000 0 0x2200000>;
 		};
 
-		pil_ipa_fw_mem: ips_fw_region@57100000 {
+		pil_ipa_fw_mem: ips_fw_region@57500000 {
 			compatible = "removed-dma-pool";
 			no-map;
-			reg = <0 0x57100000 0 0x10000>;
+			reg = <0 0x57500000 0 0x10000>;
 		};
 
-		pil_ipa_gsi_mem: ipa_gsi_region@57110000 {
+		pil_ipa_gsi_mem: ipa_gsi_region@57510000 {
 			compatible = "removed-dma-pool";
 			no-map;
-			reg = <0 0x57110000 0 0x5000>;
+			reg = <0 0x57510000 0 0x5000>;
 		};
 
-		pil_gpu_mem: gpu_region@57115000 {
+		pil_gpu_mem: gpu_region@57515000 {
 			compatible = "removed-dma-pool";
 			no-map;
-			reg = <0 0x57115000 0 0x2000>;
+			reg = <0 0x57515000 0 0x2000>;
 		};
 
 		cdsp_sec_mem: cdsp_sec_regions@5f800000 {
@@ -568,7 +580,15 @@
 		      <0xf300000 0x100000>;    /* GICR * 8 */
 		interrupts = <1 9 4>;
 	};
+    
+	sn_fuse: snfuse@0xA4128 {
+        compatible = "qcom,sn-fuse";
+        reg = <0x01B46134 0x4>,
+              <0x01B4607c 0x4>;
+        reg-names = "sn-base","fuse-state";
+       };
 
+	
 	jtag_mm0: jtagmm@9040000 {
 		compatible = "qcom,jtagv8-mm";
 		reg = <0x9040000 0x1000>;
@@ -847,19 +867,6 @@
 			<0xf523000 0x1400>;
 		reg-names = "osm_pwrcl_base", "osm_perfcl_base";
 		#clock-cells = <1>;
-		qcom,cpufreq-table-0 =
-			<864000>,
-			<1017600>,
-			<1305600>,
-			<1612800>,
-			<1804800>;
-
-		qcom,cpufreq-table-4 =
-			<902400>,
-			<1401600>,
-			<1536000>,
-			<1804800>,
-			<2016000>;
 	};
 
 	clock_debugcc: qcom,cc-debug {
@@ -1005,7 +1012,7 @@
 
 		/* PM QoS */
 		qcom,pm-qos-cpu-groups = <0x0f 0xf0>;
-		qcom,pm-qos-cpu-group-latency-us = <43 43>;
+		qcom,pm-qos-cpu-group-latency-us = <26 26>;
 		qcom,pm-qos-default-cpu = <0>;
 
 		pinctrl-names = "dev-reset-assert", "dev-reset-deassert";
@@ -1658,7 +1665,7 @@
 
 				msm_cdsp_rm: qcom,msm_cdsp_rm {
 					compatible = "qcom,msm-cdsp-rm";
-					qcom,qos-latency-us = <43>;
+					qcom,qos-latency-us = <44>;
 					qcom,qos-maxhold-ms = <20>;
 					#cooling-cells = <2>;
 				};
@@ -2183,10 +2190,10 @@
 
 		/* PM QoS */
 		qcom,pm-qos-irq-type = "affine_irq";
-		qcom,pm-qos-irq-latency = <43 43>;
+		qcom,pm-qos-irq-latency = <40 40>;
 		qcom,pm-qos-cpu-groups = <0x0f 0xf0>;
-		qcom,pm-qos-cmdq-latency-us = <43 43>, <43 43>;
-		qcom,pm-qos-legacy-latency-us = <43 43>, <43 43>;
+		qcom,pm-qos-cmdq-latency-us = <40 40>, <40 40>;
+		qcom,pm-qos-legacy-latency-us = <40 40>, <40 40>;
 
 		qcom,scaling-lower-bus-speed-mode = "DDR52";
 
@@ -2255,9 +2262,9 @@
 
 		/* PM QoS */
 		qcom,pm-qos-irq-type = "affine_irq";
-		qcom,pm-qos-irq-latency = <43 43>;
+		qcom,pm-qos-irq-latency = <40 40>;
 		qcom,pm-qos-cpu-groups = <0x0f 0xf0>;
-		qcom,pm-qos-legacy-latency-us = <43 43>, <43 43>;
+		qcom,pm-qos-legacy-latency-us = <40 40>, <40 40>;
 
 		clocks = <&clock_gcc GCC_SDCC2_AHB_CLK>,
 			<&clock_gcc GCC_SDCC2_APPS_CLK>;
@@ -2682,7 +2689,7 @@
 
 &pm6125_vadc {
 	pinctrl-names = "default";
-	pinctrl-0 = <&camera_therm_default &emmc_therm_default>;
+	pinctrl-0 = <&camera_therm_default &emmc_therm_default &backlight_therm_default>;
 
 	rf_pa0_therm {
 		reg = <ADC_AMUX_THM1_PU2>;
@@ -2715,6 +2722,14 @@
 		qcom,hw-settle-time = <200>;
 		qcom,pre-scaling = <1 1>;
 	};
+
+	backlight_therm {
+		reg = <ADC_GPIO4_PU2>;
+		label = "backlight_therm";
+		qcom,ratiometric;
+		qcom,hw-settle-time = <200>;
+		qcom,pre-scaling = <1 1>;
+	};
 };
 
 &pm6125_gpios {
@@ -2732,6 +2747,13 @@
 		};
 	};
 
+	backlight_therm {
+		backlight_therm_default: backlight_therm_default {
+			pins = "gpio7";
+			bias-high-impedance;
+		};
+	};
+
 };
 
 &spmi_bus {
@@ -2743,7 +2765,8 @@
 			#address-cells = <1>;
 			#size-cells = <0>;
 			io-channels = <&pm6125_vadc ADC_GPIO1_PU2>,
-					<&pm6125_vadc ADC_GPIO3_PU2>;
+					<&pm6125_vadc ADC_GPIO3_PU2>,
+					<&pm6125_vadc ADC_GPIO4_PU2>;
 
 			camera_flash_therm {
 				reg = <ADC_GPIO1_PU2>;
@@ -2753,6 +2776,12 @@
 
 			emmc_ufs_therm {
 				reg = <ADC_GPIO3_PU2>;
+				qcom,ratiometric;
+				qcom,hw-settle-time = <200>;
+			};
+
+			backlight_therm {
+				reg = <ADC_GPIO4_PU2>;
 				qcom,ratiometric;
 				qcom,hw-settle-time = <200>;
 			};
@@ -2794,15 +2823,15 @@
 	};
 
 	bat_therm {
-		qcom,lut-index = <1>;
+		qcom,lut-index = <0>;
 	};
 
 	bat_therm_30k {
-		qcom,lut-index = <1>;
+		qcom,lut-index = <0>;
 	};
 
 	bat_therm_400k {
-		qcom,lut-index = <1>;
+		qcom,lut-index = <0>;
 	};
 
 	conn_therm {
@@ -3034,7 +3063,12 @@
 	vdd_l1_l2-supply = <&S6A>;
 };
 
+&pm8008_8 {
+	status = "disabled";
+};
+
 &pm8008_9 {
+	status = "disabled";
 	/* GPIO1 pinctrl config */
 	pinctrl-names = "default";
 	pinctrl-0 = <&pm8008_gpio1_active>;
